WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121482
REGRESSION(
r155910
): WebKit nightly builds don't load any page
https://bugs.webkit.org/show_bug.cgi?id=121482
Summary
REGRESSION(r155910): WebKit nightly builds don't load any page
Mihnea Ovidenie
Reported
2013-09-17 05:03:15 PDT
C++ style comments in wtf/Platform.h are not processed correctly, we have to replace them with C style comments.
Attachments
Patch
(1.44 KB, patch)
2013-09-17 05:05 PDT
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mihnea Ovidenie
Comment 1
2013-09-17 05:05:59 PDT
Created
attachment 211888
[details]
Patch
WebKit Commit Bot
Comment 2
2013-09-17 05:39:35 PDT
Comment on
attachment 211888
[details]
Patch Clearing flags on attachment: 211888 Committed
r155950
: <
http://trac.webkit.org/changeset/155950
>
WebKit Commit Bot
Comment 3
2013-09-17 05:39:37 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 4
2013-09-17 10:03:18 PDT
That's a very late failure. I'm not even sure how this is possible. Is there a way to make it so that wrong comment style would cause a build failure instead of runtime failure, so that this wouldn't happen in the future?
Mihnea Ovidenie
Comment 5
2013-09-17 10:14:28 PDT
(In reply to
comment #4
)
> That's a very late failure. I'm not even sure how this is possible. > > Is there a way to make it so that wrong comment style would cause a build failure instead of runtime failure, so that this wouldn't happen in the future?
That would be great because it already happened in
https://bugs.webkit.org/show_bug.cgi?id=114752
.
Alexey Proskuryakov
Comment 6
2013-09-17 10:20:10 PDT
I see, so it's sandbox profile generation.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug