REGRESSION(r155910): WebKit nightly builds don't load any page https://bugs.webkit.org/show_bug.cgi?id=121482

Reviewed by Andreas Kling.

Replaced C++ style comments with C style comments.

* wtf/Platform.h:


Canonical link: https://commits.webkit.org/139476@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155950 268f45cc-cd09-0410-ab3c-d52691b4dbfc